# python_template

./: Changelog.md  README.md  mypy.ini  requirements-dev.in  requirements-dev.txt  setup.cfg  tox.ini
docs/: conf.py  package_doc.rst
template_module/: echo_cli.py  version.py
tests/: test_echo_cli.py
