[metadata]
name = template_module
author = Tobias Schaffner
version = attr: template_module.version.__version__
description = Python Template
long_description = file: README.md

[options]
include_package_data = True
packages = template_module

[options.data_files]
data = requirements.txt

[pycodestyle]
max-line-length = 100

[isort]
profile = black
line_length = 100

[flake8]
format = wemake
show-source = True
statistics = False
doctests = True
docstring_style = google
inline-quotes = double
max-line-length = 100

ignore =
    # Ignore whitespace before ":" to be compatible to black
    W503,
    # Allow local imports
    WPS300,
    # Allow f strings
    WPS305,
    # Do not enforce inheritance of base class "object"
    WPS306,
    # Do allow positional only arguments
    WPS451,

per-file-ignores =
    # Allow asserts in tests
    # Do not require docstrings in tests
    # The fixture mechanism of pytest causes shadowing
    tests/*.py: S101,D,WPS442
    # __init__ file do not need a documentation
    */__init__.py: D104
